making an english subsite

--- a/index_en.html
+++ b/index_en.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="sk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hemar s.r.o. - Servisné činnsoti, Strojárska technológia</title>
+    <title>Hemar s.r.o. - Servis activities, machine technology</title>
     <link rel="stylesheet" href="./CSS/home.css">
     <link rel="icon" href="./images/logo_vektor.png">
     <link rel="canonical" href="http://hemar-slovakia.sk">
-    <meta name="keywords" content="Hemar, Hemar sro, servisné činnosti, nová baňa, montážne činnosti, výmeny mebranových tesnení">
+    <meta name="keywords" content="Hemar, Hemar sro, servis, nová baňa, assembly opperations, exchange of membrane seals">
     <meta name="google-site-verification" content="IAtmC6FETm_rJBXfTd74viYqFw3w2K_xSpGDR_-tKVk" />
-    <meta name="description" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta name="description" content="Our company is in machine industry - assembly opperations, servis, exchange of membrane seals.">
     <meta property="og:title" content="HEMAR s.r.o.">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Naša firma pôsobí v strojárskej technológii -montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta property="og:description" content="Our company is in machine industry - assembly opperations, servis, exchange of membrane seals.">
     <meta property="og:image" content="http://hemar-slovakia.sk/Hemar_web/images/logo_vektor.png">
     <meta property="og:url" content="http://hemar-slovakia.sk">
     <meta name="twitter:title" content="HEMAR s.r.o.">
-    <meta name="twitter:description" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta name="twitter:description" content="Our company is in machine industry - assembly opperations, servis, exchange of membrane seals.">
     <meta name="twitter:url" content="http://hemar-slovakia.sk">
     <meta name="twitter:image" content="http://hemar-slovakia.sk/Hemar_web/images/logo_vektor.png">
-    <meta name="twitter:card" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť,servisné činnosti, výmeny mebranových tesnení.">
+    <meta name="twitter:card" content="Our company is in machine industry - assembly opperations, servis, exchange of membrane seals.">
 </head>
 <body>
     <header>
@@ -29,10 +29,10 @@
                 <a href="index.html"><h1>Hemar s.r.o.</h1></a>
             </aside>
             <ul class="nav_list">
-                <li><a href="#about_us" title="O nás">O nás</a></li>
-                <li><a href="#services" title="Služby">Služby</a></li>
-                <li><a href="#work" title="Naše Práce">Naše Práce</a></li>
-                <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
+                <li><a href="#about_us" title="O nás">About us</a></li>
+                <li><a href="#services" title="Služby">Services</a></li>
+                <li><a href="#work" title="Naše Práce">Our work</a></li>
+                <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">contact</a></li>
             </ul>
             <div class="burger">
                 <div class="hamburger-menu">
@@ -41,10 +41,10 @@
                         <span></span>
                     </label>
                     <ul class="menu__box">
-                        <li><a href="#about_us" title="O nás">O nás</a></li>
-                        <li><a href="#services" title="Služby">Služby</a></li>
-                        <li><a href="#work" title="Naše Práce">Naše Práce</a></li>
-                        <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
+                        <li><a href="#about_us" title="O nás">About us</a></li>
+                        <li><a href="#services" title="Služby">Services</a></li>
+                        <li><a href="#work" title="Naše Práce">Our work</a></li>
+                        <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,9 +55,9 @@
             <section>
                 <article>
                     <aside class="land_content">
-                        <h2>Vitajte na stránke Hemar s.r.o</h2>
-                        <strong>Už viac ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých a skúsených pracovníkov.</strong>
-                        <br><a href="#work" title="Naše Práce">Naše Práce</a>
+                        <h2>Welcome to Hemar s.r.o</h2>
+                        <strong>We have been building “our family” for 10 years. As a company, <br> we love a challenge, so we’re open to yours too. </strong>
+                        <br><a href="#work" title="Naše Práce">Our Work</a>
                     </aside>
                 </article>
             </section>
@@ -65,10 +65,12 @@
         <section id="about_us">
             <article>
                 <aside>
-                    <h2>O Nás</h2>
-                    <p>Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa ako elektrikárska a strojárska spoločnosť podieľala na mnohých projektoch pre renomované firmy rôzneho zamerania, hlavne v oblasti elektrikárskych prác, taktiež naša firma pôsobí v strojárstve, kde vykonávame montážne a demontážne práce, servisné práce, montáž potrubných systémov, zváranie MIG/MAG/MMA, výmeny membránových tesnení alebo celú kompletizáciu.
-                        No napriek tomu stále nekončíme a sme otvorení novým výzvam bez  rozdielu na obtiažnosti projektu, vždy sme pripravení pridať hodnotu a úspešne zvládnuť akúkoľvek úlohu, ktorá nám príde do cesty.
-                        Naša spoločnosť má k dispozícii skúsený tím elektrikárov so štátnymi skúškami, kvalifikovaných zámočníkov a zváračov so znalosťami v čítaní technickej dokumentácie.</p>
+                    <h2>About us</h2>
+                    <p>
+                        During our operation we have been involved in numerous projects for reknowned companies, mainly in the Electrical work and membrane seals.
+                        Our company also operates in Welding, mechanical engineering, service activities, replacement of membrane seals, assembly works and repairs.
+                        The Company has teams of skilled workers who have carried out technological solutions, assembly works and repairs for top companies in the industry for European Union countries and beyond. If you entrust your projects to our company, you will get a reliable partner, quality services and interesting price conditions.    
+                    </p>
                 </aside>
                 <video controls>
                     <source src="./images/videoplayback.mp4" type="video/mp4" title="úvodné videjko">
@@ -77,27 +79,27 @@
         </section>
         <section id="services">
             <article>
-                <h2>Služby</h2>
+                <h2>Services</h2>
                 <aside>
-                    <h3>Elektrikárske práce</h3>
+                    <h3>Electrical work</h3>
                 </aside>
                 <aside>
-                    <h3>Strojárske práce</h3>
+                    <h3>Machine repairs</h3>
                 </aside>
                 <aside>
-                    <h3>Zváranie</h3>
+                    <h3>Welding</h3>
                 </aside>
                 <aside>
-                    <h3>Servisné činnosti</h3>
+                    <h3>Servis</h3>
                 </aside>
                 <aside>
-                    <h3>Výmena membranovych tesnení</h3>
+                    <h3>Exchange of membrane seals</h3>
                 </aside>
             </article>
         </section>
         <section id="work">
             <article>
-                <h2>Naše práce</h2>
+                <h2>Our work</h2>
                 <aside class="carousel-container">
                     <figure>
                         <div class="carousel">
@@ -108,7 +110,7 @@
                                 <img src="./images/newri_irsko/image_12365029124.JPG" alt="Ihrisko" title="Írsko">
                             </div>
                         </div>
-                        <figcaption>Project - Írsko</figcaption>
+                        <figcaption>Project - Ireland</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -127,7 +129,7 @@
                                 <img src="./images/morgan_sint_rode/image_1236502918.JPG" alt="Montáž" title="Morgan Sint Rode">                            
                             </div>
                         </div>
-                        <figcaption>Projekt - Morgan Sint Rode</figcaption>
+                        <figcaption>Project - Morgan Sint Rode</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -140,7 +142,7 @@
                                 <img src="./images/holgstraten_solar_panels/image_123650291.JPG" alt="solar panely" title="Holgstraten solar panels">
                             </div>
                         </div>
-                        <figcaption>Projekt - Holgstraten solar panels</figcaption>
+                        <figcaption>Project - Holgstraten solar panels</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -156,7 +158,7 @@
                                 <img src="./images/stredna_skola_mechelen/image_123650291.JPG" alt="skola" title="Stredná Škola Mechelen">       
                             </div>
                         </div>     
-                        <figcaption>Projekt - Stredná Škola Mechelen</figcaption>
+                        <figcaption>Project - Mechelen Highschool</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -175,7 +177,7 @@
                                 <img src="./images/psych_liecebna_teinen/8.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">                            
                             </div>
                         </div>
-                        <figcaption>Projekt - Psychiatrická liečebňa Tienen</figcaption>
+                        <figcaption>Projekt - Psychiatric hospital Tienen</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -195,7 +197,7 @@
                                 <img src="./images/sportovy_klub_brusel/S8.JPG" alt="Brusel" title="Šport pub Brusel">            
                             </div>
                         </div>
-                        <figcaption>Projekt - Šport pub Brusel</figcaption>
+                        <figcaption>Projekt - Sport pub Brusel</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -206,20 +208,20 @@
     <footer>
         <section id="contact_info">
             <aside class="Kontakt">
-                <h3>Kontakt:</h3>
+                <h3>Contakt:</h3>
                 <p>
                     <strong>E-mail:</strong><br>
                     <a href="mailto:hemarsro@gmail.com" class="btn">hemarsro@gmail.com</a>
                 </p>
                 <p>
-                    <strong>Telefónne číslo:</strong><br>
+                    <strong>Phone Number:</strong><br>
                     <a href="tel:+421911021777">+421 911 021 777</a> <br>
                     <a href="tel:+421905325648">+421905325648</a>
                 </p>
             </aside>
             <aside class="map">
                 <aside>
-                    <strong>Fakturačné údaje:</strong>
+                    <strong>Billing information:</strong>
                     <p>IČO: 47 019 620</p>
                     <p>DIČ: 2023709567</p>
                     <p>IČ DPH: SK 2023709567</p>
@@ -243,7 +245,7 @@
                 </a>
             </aside>
             <p>&copy; Hemar s.r.o.</p>  
-            <p>Stránku vytvoril: <strong><a href="https://github.com/SamuelHula">Samuel Hula</a></strong></p>
+            <p>Website Creator: <strong><a href="https://github.com/SamuelHula">Samuel Hula</a></strong></p>
         </section>
         <script>
             document.querySelectorAll('.carousel-container').forEach((carouselContainer) => {
