--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <img src="./images/Project_Germany/a9a052d9-22d5-4252-8970-8d491a09527d.jpeg" alt="Project Germany" title="Project Germany">            
                             </div>
                         </div>
-                        <figcaption>Project Germany</figcaption>
+                        <figcaption>Projekt Nemecko</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -258,7 +258,7 @@
                                 <img src="./images/Project_Belgium/IMG_6011.jpg" alt="Project Belgium" title="Project Belgium">        
                             </div>
                         </div>
-                        <figcaption>Project Belgium</figcaption>
+                        <figcaption>Projekt Belgicko</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
