--- a/index_en.html
+++ b/index_en.html
@@ -201,7 +201,7 @@
                                 <img src="./images/psych_liecebna_teinen/8.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">                            
                             </div>
                         </div>
-                        <figcaption>Projekt - Psychiatric hospital Tienen</figcaption>
+                        <figcaption>Project - Psychiatric hospital Tienen</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
@@ -221,7 +221,7 @@
                                 <img src="./images/sportovy_klub_brusel/S8.JPG" alt="Brusel" title="Šport pub Brusel">            
                             </div>
                         </div>
-                        <figcaption>Projekt - Sport pub Brusel</figcaption>
+                        <figcaption>Project - Sport pub Brusel</figcaption>
                     </figure>
                     <button class="prev"><</button>
                     <button class="next">></button>
